<resources>
    <string name="app_name">Bestaurant</string>
    <string name="look_text">Look Up</string>
    <string name="favorites_text">Favorites</string>
    <string name="random_text">Pick For Me (random)</string>
    <string name="viewed_text">Recently Viewed</string>
    <string name="action_text">ACTION!</string>
    <string name="test_text">work</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map_map">Maps</string>
    <string name="add_name">Name</string>
    <string name="add_star">Star</string>
    <string name="add_address">Address</string>
    <string name="add_type">Type</string>
    <string name="add_restaurant">Create Restaurant</string>
    <string name="add_to_database">Add Restaurant</string>
    <string name="get_text">Get Locations Around Me</string>

</resources>