<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/app_name" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/look_button"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/look_text" />

        <Button
            android:id="@+id/favorites_button"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/favorites_text" />

        <Button
            android:id="@+id/random_button"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/random_text" />

        <Button
            android:id="@+id/viewed_button"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/viewed_text" />
        <Button

            android:id="@+id/maps_button"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/map_map" />
        <Button
            android:id="@+id/storing_button"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/add_restaurant" />
    </LinearLayout>



</LinearLayout>